working on the border overflow issue

--- a/_Global/css/main.css
+++ b/_Global/css/main.css
@@ -6,7 +6,8 @@
     font-style: normal;
 }
 
-body {
+html, body {
+    height:100%;
     margin:0px;
     background-color: rgb(0,0,0);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -16,6 +17,7 @@ body {
     margin-top:10px;
     padding: 0px 55px 55px 55px;
     background-color: rgb(247, 247, 247);
+    height:100%;
 }
 
 
@@ -26,7 +28,6 @@ body {
     font-size: 40px;
     color: rgb( 0, 0, 0 );
     font-weight: bold;
-    line-height: 0.707;
     letter-spacing: -2;
     text-align: left;
 }
@@ -47,7 +48,12 @@ body {
 
 
 /* Main content */
-.inner-wrapper{ text-align:center;background: url('/_Global/images/bg/bg.png') no-repeat center top; background-size:cover;}
+.inner-wrapper{
+    height:100%;
+    text-align:center;
+    background: url('/_Global/images/bg/bg.png') no-repeat center top;
+    background-size:cover;
+}
 
 
 /* Responsive */
